almost close the convert function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button type="button" id="convert-btn">Convert</button>
       </fieldset>
     </form>
-    <div id="output" class="output">2</div>
+    <div id="output" class="output"></div>
   </main>
   <script src="/index.js"></script>
 </body>
